        * src/Rcpp_init.c: export capabilities (renamed rcpp_capabilities)
        * include/Rcpp/traits/traits.h: master file for all traits includes
        * include/Rcpp/macros/macros.h: master file for all macros includes
        * include/Rcpp/DataFrame.h: just have declaration for DataFrame
        * include/Rcpp/Benchmark/Timer.h: move it into the Rcpp:: namespace
        
2012-12-09 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp: merge many .cpp files here to reduce compile time
        * src/barrier.cpp: merge with cache.cpp to reduce compile time
        * include/Rcpp/exceptions.h: drop forward_uncaught_exceptions_to_r
        * src/exceptions.cpp: drop forward_uncaught_exceptions_to_r
        * src/Date.cpp: merge all Date related files
        
2012-12-08 Romain Francois <romain@r-enthusiasts.com>

        * src/Timer.cpp: implementation of Timer
        * include/Rcpp/Benchmark/Timer.h: internal performance timer, based on
        the code from the microbenchmark package
        * include/Rcpp/api/meat/Matrix.h: move more in Matrix meat
        * src/Date.cpp: import the code from posixt.cpp

2012-12-07  JJ Allaire <jj@rstudio.org>

        * src/AttributesGen.cpp: use __ prefix for variables in generated
        code; add RNGScope for attribute exported functions.

2012-12-07 Romain Francois <romain@r-enthusiasts.com>

        * src/random.cpp: instantiations of random generators here
        * include/Rcpp/stats/random/random.h: only have declarations of 
        random generators here. Rework the Generator template so that 
        it inherits RNGScope to provide automatic calls to GetRNGstate
        and PutRNGstate
        
2012-12-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: revert DOS newlines; use new shared library name
        for each rebuild in sourceCpp
        * src/Attributes.cpp: revert DOS newlines; define RCPP_NO_SUGAR;
        use new shared library name for each rebuild in sourceCpp