@@ -14,6 +14,7 @@
         * include/Rcpp/macros/macros.h: master file for all macros includes
         * include/Rcpp/DataFrame.h: just have declaration for DataFrame
         * include/Rcpp/Benchmark/Timer.h: move it into the Rcpp:: namespace
+        * include/Rcpp/cache.h: clean
         
 2012-12-09 Romain Francois <romain@r-enthusiasts.com>
 
